# codepress-engine

./: .codepressignore  .eslintrc.js  .gitignore  .npmrc  .prettierrc  CHANGELOG.md  CLAUDE.md  ESBUILD-PLUGIN.md  FEATURE_PARITY.md  INSTALL.md  LICENSE  MODULE_MAP_INTEGRATION.md  PORTING_GUIDE.md  README.md  SYNC_STRATEGY.md  TESTING.md  VERSIONING.md  babel.config.js  eslint.config.mjs  jest.config.js  local-test-setup.md  package-lock.json  package.json  plugin-spec.yaml  pnpm-lock.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-and-deploy.yml  publish-npm.yml  (+3 more)
babel/: index.js
codepress-swc-plugin/: Cargo.toml  Cargo.toml.template
codepress-swc-plugin/src/: lib.rs
examples/: babel-usage.js  next-config-with-module-map.js  next-config.js
scripts/: build-swc.mjs  build-wasm-matrix.js
src/: CPRefreshProvider.tsx  cli.js  cli.ts  component-manifest.js  esbuild-plugin.ts  git-info.js  hash-util.js  hash-util.ts  index.js  index.ts  manifest-writer.js  previewBundle.ts  server.js  server.ts  types.ts  webpack-plugin.ts
swc/: codepress_engine.v0_82_87.wasm  codepress_engine.v26.wasm  codepress_engine.v42.wasm  codepress_engine.wasm  createSWCPlugin.js  index.js  runtime.js  runtime.jsx
test/: README.md  cli.test.js  esbuild-plugin.test.ts  fixtures.test.js  index.test.js  index.test.ts  plugin-parity.test.js  server.test.js  server.test.ts  shared-fixtures.js  swc-plugin.test.js  webpack-plugin.test.ts
tests/: swc-plugin.test.js  swc-plugin.test.ts  transform.test.js  transform.test.ts
(+21 files in other folders)
