[package]
name = "codepress_swc_plugin"
version = "0.10.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
strip = "symbols" 

[dependencies]
base64 = "0.22.1"
once_cell = "1.21.3"
regex = "1.11.1"
swc_core = { version = "27.0.6", default-features = false, features = ["ecma_plugin_transform"] }
