[package]
name = "codepress_swc_plugin"
version = "0.10.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
strip = "symbols" 

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
swc_core = { version = "26.4.5", default-features = false, features = ["ecma_plugin_transform"] }
